# Bvalcalc

./: .200kb_dfe5.bvals.swp  .200kb_slimtest.csv.swp  .buildinfo  .gitignore  .newParams.py.swp  .profile_data.prof.swp  .profile_output.txt.swp  .profile_output2.txt.swl  .profile_output2.txt.swm  .profile_output2.txt.swn  .profile_output2.txt.swo  .profile_output2.txt.swp  40kb_gc.bvals  Bvalcalc.py  DemogParams.py  Dockerfile  DrosophilaParams.py  ExampleParams.py  ExtremeDFE.py  HEADER_FORMAT_SPEC.md  HumanParams.py  LICENSE  MANIFEST.in  PfalciparumParams.py  README.md  constants.py  debug_header_parsing.py  docker_tests.sh  drosophila_params.py  false_Bvalues_chr3R.csv  genindex.html  helperScripts.code-search  index.html  newParams.py  objects.inv  out  out.bvals  out.txt  plotB_figures_200kb.py  profile_data.prof  (+8 more)
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: calculateB.doctree
.doctrees/guides/: demography.doctree  multiple_dfes.doctree  params.doctree  quickstart.doctree  sweepfinder2.doctree
.doctrees/introduction/: bedgff_input.doctree  generate_params.doctree  installation.doctree
.doctrees/modes/: gene.doctree  genome.doctree  region.doctree  site.doctree  vcf.doctree
.doctrees/modules/: bmap_utils.doctree  gene.doctree  genome.doctree  region.doctree  site.doctree
.doctrees/prebuilt_maps/: bmaps.doctree  learn.doctree  query.doctree
.github/: ci.yml
.github/workflows/: ci.yml  deploy-docs.yml
Bvalcalc/: __init__.py  cli.py
Bvalcalc/core/: calculateB.py  chromBcalc.py  geneBcalc.py  genomeBcalc.py  plotB.py  regionBcalc.py  siteBcalc.py
Bvalcalc/data/: cds_noX.bed
Bvalcalc/templates/: AraTha_Cds_Params.py  AraTha_Phastcons_Params.py  ArabidopsisParams.py  DroMel_Cds_Params.py  DroMel_Phastcons_Params.py  DroMel_Utr_Params.py  HomSap_Cds_Params.py  HomSap_Phastcons_Params.py  SelfingParams.py
Bvalcalc/utils/: dfe_helper.py  header_utils.py  load_Bmap.py  load_bed_gff.py  load_chr_sizes.py  load_rec_map.py  parseArgs.py  sample_data.py  write_chrom_B_to_file.py
_modules/: index.html
_sources/: index.rst.txt
_sources/api/: calculateB.rst.txt
_static/: custom.css
api/: calculateB.html
bvalcalc/: __init__.py  cli.py
bvalcalc.egg-info/: PKG-INFO
conda/: meta.yaml
core/: calculateB.py  chromBcalc.py  geneBcalc.py  genomeBcalc.py  plotB.py  preciseBcalc.py  regionBcalc.py  siteBcalc.py
data/: README.md  utr_noX.bed
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
exampleData/: .200kb_slimtest.txt.swp  .dmel6_2R_genes.csv.swp  .human_gencodev39_chr13.csv.swp  .slim_format_1Mb_CDS_dmel6.txt.swp  .test.bed.swp  200kb_slimtest.csv  200kb_slimtest.txt  50kb_test.csv  dmel6_2R_genes.csv  multi_chrom_sizes.csv  slim_format_1Mb_CDS_dmel6.txt  slim_format_200kb_CDS_dmel6.txt  test.bed  test.csv  test_sizes.txt
examples/: .chr3R_test.vcf.swp  .false_Bvalues_chr3R.csv.swp  1Mb_CDS_dmel6.csv  CDS_dmel6.csv  dfe_bvals.csv  dmel6_2R_genes.bed  dmel6_2R_genes.csv  dmel6_2R_genes.gff  false_Bvalues_chr3R.csv  false_CDS_dmel6_3R.csv  human_gencodev39_chr13.csv  multi_chrom_sizes.csv  multi_chrom_test.csv  short_CDS.csv  test.bed
guides/: demography.html  multiple_dfes.html  params.html  quickstart.html  sweepfinder2.html
helperScripts/: calculateB.py  genomeBcalc.py  parseArgs.py  plotBasic.py  regionBcalc.py  siteBcalc.py
introduction/: bedgff_input.html  generate_params.html  installation.html
manuscript/: Bvalcalc_code.sh  Figure2.rmd  Figure3.py  README.md
modes/: gene.html  genome.html  region.html  site.html  vcf.html
modules/: bmap_utils.html  gene.html  genome.html  region.html  site.html
prebuilt_maps/: bmaps.html  learn.html  query.html
pythonScripts/: .Bcalc_multiElements.py.swp  Bcalc_function.py  Bcalc_multiElements.py  Bvalcalc.py  calcLfromB_function.py  calculate_B_analytically_Eq3_mine_demography.py  calculate_B_analytically_Eq3_mine_demography_multiple_elements.py  calculate_B_analytically_Eq3_mine_demography_stdoutput.py  constants.py  dfe_bvals.csv  main.py  old_Bcalc_multiElements.py  profile.out  sandbox.py  temp.txt
sideScripts/: findFlankLen.py
templates/: DrosophilaParams.py  PfalciparumParams.py  TemplateParams.py
tests/: conftest.py  test_calculateB.py  test_cli.py
trash/: DrosophilaParams.py
vignettes/: cli_quickstart.md
(+218 files in other folders)
